Fix spacing

--- a/style.css
+++ b/style.css
@@ -75,3 +75,22 @@ input[type="range"] {
 input[type="range"]:not(:last-child) {
     margin-bottom: 5px;
 }
+
+section:not(:last-child) {
+    margin-bottom: 40px;
+}
+
+section:not(:first-child) {
+    margin-top: 40px;
+}
+
+section:last-child {
+    background-color: #cdccfd;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+section:last-child .value, 
+section:last-child .label {
+    color: #4c4af4;
+}
